--- a/requirements.txt
+++ b/requirements.txt
@@ -99,7 +99,7 @@ python-dateutil==2.8.1
 PythonQwt==0.9.0
 pytz==2021.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==228
+pypiwin32==225
 pywinpty==1.1.2
 PyYAML==5.4.1
 pyzmq==22.0.3
