--- a/requirements.txt
+++ b/requirements.txt
@@ -99,8 +99,8 @@ python-dateutil==2.8.1
 PythonQwt==0.9.0
 pytz==2021.1
 pytz-deprecation-shim==0.1.0.post0
-pypiwin32>=219
-pywinpty>=1.1.1
+#pypiwin32==219
+#pywinpty==1.1.4
 PyYAML==5.4.1
 pyzmq==22.0.3
 QtPy==1.9.0
